# micro-swagga-label

./: Caddyfile  test_microservies.sln
analytics_service/: Cargo.toml
auth_service/: Dockerfile  database.py  main.py
backend/: .env  ADD_SERVICE.md  Caddyfile  README.md  docker-compose.yml
backend/analytics_service/: Dockerfile
backend/auth_service/: Dockerfile  auth.py  main.py  models.py  requirements.txt  schemas.py
backend/categories_service/: package.json  tsconfig.json
backend/comments_service/: app.rb  config.ru
backend/coupons_service/: Dockerfile  composer.json
backend/docs_service/: main.py
backend/inventory_service/: pom.xml
backend/notifications_service/: Dockerfile
backend/orders_service/: package.json
backend/payments_service/: go.mod  main.go
backend/products_service/: Dockerfile  pubspec.yaml
backend/reviews_service/: Dockerfile  app.py  requirements.txt
backend/shipping_service/: Dockerfile  Program.cs
backend/tags_service/: package.json
backend/user_service/: Dockerfile  database.py  main.py  requirements.txt  schema.py  user_service.py
categories_service/: Dockerfile
categories_service/src/: app.module.ts  categories.controller.ts  main.ts
comments_service/: Dockerfile  Gemfile
coupons_service/public/: index.php
inventory_service/: Dockerfile
microservise/: README.md  pubspec.yaml
microservise/linux/: CMakeLists.txt
notifications_service/: app.py
payments_service/: Dockerfile
shipping_service/: ShippingService.csproj
tags_service/: Dockerfile  index.js
user_service/: Dockerfile  models.py
(+30 files in other folders)
